# CatParse

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  index.html  latest.json  package-lock.json  package.json  vite.config.js  更新方案.md
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  version-bump.yml
_docs/: Bilibili下载技术文档.md  视频解析下载技术方案.md
_references/video-parser-main/: README.md
parser-service/: a_bogus.js  backend_server.spec  build_exe.py  main.py  requirements.txt
parser-service/parsers/: __init__.py  bilibili.py  douyin.py  xiaohongshu.py
parser-service/utils/: __init__.py  bogus.py  http_client.py  url_parser.py
src/: App.vue  main.js  style.css
src-tauri/: Cargo.toml  scripts  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/nsis/: hooks.nsi
src-tauri/src/: backend.rs  lib.rs
src-tauri/src/commands/: audio.rs  auth.rs  mod.rs
src/components/: VideoParser.vue  VideoPreview.vue  index.js
src/components/common/: AppHeader.vue  CloseMask.vue  CustomSelect.vue  HamsterLoading.vue  SettingsModal.vue  Sidebar.vue  TaskCenter.vue  TitleBar.vue  (+2 more)
src/config/: platforms.js
src/constants/: animation.js  index.js  motionAnimations.js  options.js  platforms.js  storage.js  theme.js
src/router/: index.js
src/services/: aiRewrite.js  config.js  index.js  tencentAsr.js
src/stores/: config.js  history.js  taskQueue.js  taskStore.js  theme.js
src/utils/: format.js  index.js  platform.js  urlParser.js
src/views/: HistoryPage.vue  ParsePage.vue  SettingsPage.vue  index.js
(+40 files in other folders)
